# oxbot

./: .gitignore  Dockerfile  README.md
cad/: big_wheels_battery.FCStd  oxbot_chassis_base.FCStd  rear_wheel_axle_clamp.FCStd  rear_wheel_axle_clamp_top.FCStd
install/: local_setup.sh  setup.sh
install/motion_control/lib/motion_control/: motion_controller  oxbot_teleop
install/motion_control/share/ament_index/resource_index/parent_prefix_path/: motion_control
install/motion_control/share/motion_control/: local_setup.sh  package.ps1  package.sh
install/motion_control/share/motion_control/cmake/: motion_controlConfig.cmake
install/oxbot_config/include/oxbot_config/: oxbot_config.hpp
install/oxbot_config/share/oxbot_config/: local_setup.sh  package.sh
log/: latest_build
prompts/joystick_control/: joystick_control_prompts.txt
scripts/: oxbot_start.sh
scripts/HoverSerial/: main.py
src/.devcontainer/: Dockerfile  devcontainer.json
src/ros2_ws/install/: local_setup.sh  setup.sh
src/ros2_ws/install/motion_control/lib/motion_control/: motion_controller
src/ros2_ws/install/motion_control/share/motion_control/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/ros2_ws/install/oxbot_bringup/share/oxbot_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/ros2_ws/install/oxbot_config/include/oxbot_config/: oxbot_config.hpp
src/ros2_ws/install/oxbot_config/share/oxbot_config/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/ros2_ws/install/oxbot_interfaces/share/oxbot_interfaces/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/ros2_ws/install/oxbot_startup/share/oxbot_startup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  (+6 more)
src/ros2_ws/log/: latest_build
src/ros2_ws/src/: oxbot_chassis_bottom.stl  oxbot_front_wheel.stl  oxbot_rear_wheel.stl
src/ros2_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/ros2_ws/src/joystick_control/: package.xml
src/ros2_ws/src/joystick_control/src/: JoystickControlNode.cpp  joystick_controller.cpp
src/ros2_ws/src/log/: latest_build
src/ros2_ws/src/motion_control/: CMakeLists.txt  package.xml
src/ros2_ws/src/motion_control/include/motion_control/: FeedbackFrame.hpp  MotionControllerNode.hpp  OxbotTeleopNode.hpp  SerialCommunicator.hpp  motion_control_config.hpp  ros2node_motion_controller.hpp  serial_communicator.hpp
src/ros2_ws/src/motion_control/src/: FeedbackFrame.cpp  MotionControllerNode.cpp  OxbotTeleopNode.cpp  SerialCommunicator.cpp  motion_controller.cpp  motors_node.cpp  oxbot_teleop.cpp  ros2node_motion_controller.cpp  ros2node_motion_controller.hpp  serial_communicator.cpp
src/ros2_ws/src/motion_control/test/: MotionControllerNodeTest.cpp
src/ros2_ws/src/oxbot_bringup/: CMakeLists.txt  package.xml
src/ros2_ws/src/oxbot_bringup/config/: joy_config.yaml
src/ros2_ws/src/oxbot_bringup/launch/: gazebo_bringup.launch.py  motor_testing.launch.py  operator_bringup.launch.py  oxbot_bringup.launch.py  real_oxbot.launch.py  simulated_oxbot.launch.py
src/ros2_ws/src/oxbot_bringup/rviz/: display.rviz
src/ros2_ws/src/oxbot_cartographer/: CMakeLists.txt  package.xml
src/ros2_ws/src/oxbot_cartographer/config/: oxbot_3d.lua
src/ros2_ws/src/oxbot_cartographer/launch/: occupancy_grid.launch.py  oxbot_cartographer.launch.py
src/ros2_ws/src/oxbot_cartographer/lua/: oxbot_3d.lua
src/ros2_ws/src/oxbot_config/: CMakeLists.txt
src/ros2_ws/src/oxbot_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/ros2_ws/src/oxbot_description/config/: oxbot_controllers.yaml
src/ros2_ws/src/oxbot_description/launch/: display.launch.py  gazebo.launch.py
src/ros2_ws/src/oxbot_description/meshes/: oxbot_antenna.stl  oxbot_chassis_top.stl  oxbot_fan.stl  oxbot_realsense_mount.stl
src/ros2_ws/src/oxbot_description/rviz/: display.rviz  rvizconfig2.rviz  rvizconfig3.rviz
src/ros2_ws/src/oxbot_description/urdf/: oxbot.urdf.xacro  oxbot_gazebo.xacro  oxbot_ros2_control.xacro
src/ros2_ws/src/oxbot_description/worlds/: my_house.sdf
src/ros2_ws/src/oxbot_gz_controller/: CMakeLists.txt  package.xml
src/ros2_ws/src/oxbot_gz_controller/config/: joy_config.yaml
src/ros2_ws/src/oxbot_gz_controller/include/oxbot_gz_controller/: GZControllerNode.hpp  OxbotTeleopNode.hpp
src/ros2_ws/src/oxbot_gz_controller/launch/: controller.launch.py
src/ros2_ws/src/oxbot_gz_controller/src/: GZControllerNode.cpp  OxbotTeleopNode.cpp  gz_motion_controller.cpp
src/ros2_ws/src/oxbot_interfaces/: CMakeLists.txt  package.xml
src/ros2_ws/src/oxbot_interfaces/msg/: MotionControlOutput.msg
src/ros2_ws/src/oxbot_mapping/: CMakeLists.txt  package.xml
src/ros2_ws/src/oxbot_mapping/launch/: slam.launch.py
src/ros2_ws/src/oxbot_mapping/maps/: my_map5.pgm  my_map5.yaml
src/ros2_ws/src/oxbot_testing/: CMakeLists.txt
src/ros2_ws/src/oxbot_testing/src/: MotorTestingNode.cpp  motor_tester.cpp
(+70 files in other folders)
